# pylint-quacking

./: .gitignore  README.md  pyproject.toml  quacking.py
.github/workflows/: python-package.yml
pylint_quacking/: __init__.py  quacking.py  test_quacking.py
