[tool.poetry]
name = "pylint-quacking"
version = "0.1.2"
description = "Ban annotations. Ducks rule!"
readme = "README.md"
authors = ["Pete Wildsmith <pete@weargoggles.co.uk>"]
license = "MIT"
homepage = "https://github.com/weargoggles/pylint-quacking"

[tool.poetry.dependencies]
python = "^3.7"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
